Added X++ language for Microsoft Dynamics 365 F&O

--- a/src/SnippetDesigner/Resources.resx
+++ b/src/SnippetDesigner/Resources.resx
@@ -367,4 +367,7 @@
   <data name="DisplayNameTypeScript" xml:space="preserve">
     <value>TypeScript</value>
   </data>
+  <data name="DisplayNameXPP" xml:space="preserve">
+    <value>XPP</value>
+  </data>
 </root>
